fixed x-overflow in some spots

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,5 +64,10 @@
   }
   .welcomeImage {
     padding: 0%;
+    width: 100%;
+  }
+  .img {
+    width: 100%;
+    height: auto;
   }
 }
